# video-translation

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  exceptions.py  main.py  pyproject.toml  requirements.txt  setup_env.sh  subtitles.py  translation.py
outputs/: translated_video_translated.srt
