[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translation"
version = "1.0.0"
description = "Video translation with voice cloning and lip-sync using LatentSync"
authors = [
    {name = "Aman Rangapur", email = "amanrangapur@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = [
    "video-translation",
    "voice-cloning",
    "lip-sync",
    "tts",
    "latentsync",
    "xtts",
    "multilingual"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/aman-17/video-translation"
Repository = "https://github.com/aman-17/video-translation"
Issues = "https://github.com/aman-17/video-translation/issues"
Documentation = "https://github.com/aman-17/video-translation/blob/main/README.md"

[tool.setuptools]
py-modules = ["main", "config", "exceptions", "subtitles", "translation"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | latentsync
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = ["latentsync", "venv", ".venv"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "latentsync/",
    "venv/",
    ".venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
